
2018-02-21  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* typeck.y (validate_move): check for ADDRESS OF var as invalid
	  (bug #495), fixed check for SET statement

2018-02-17  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* parser.y (report_description_option): fixed reference for CODE IS
	* parser.y (page_line_column): adjusted check for duplicate LINE LIMIT
	* codegen.c (output_internal_function): fixed position of
	  initialization for report files in INITIAL programs
	* pplex.l, scanner.l: don't consume trailing whitespace/newline
	  if not necessary, combined some groups with optional/or modifiers
	* parser.y (select_clause): minimized context-sensitive settings

2018-02-16  Dave Pitts <dpitts@cozx.com>

	* cobc.c (get_next_token): BUG #494 Fixed scanning of tokens with 
	  embedded quotes, eg. 'yyy-'hello

2018-02-15  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* typeck.c (validate_move, move_warning): show literal size for
	  size overflow warnings (for numeric literals the actual literal)
	* cobc.c (preprocess): FR #81 preprocess to stdout if no output file
	  is given (= revert back to behaviour of GnuCOBOL pre 2.x)

2018-02-09  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* reserved.c: renamed cob_strcasecmp to cb_strcasecmp
	* reserved.c (default_reserved_words_list): removed EBCDIC handling
	  as the list is always sorted now
	* reserved.c (initialize_reserved_words_if_needed): use case
	  sensitive comparison when sorting default_reserved_words_list
	* field.c: adjustments for REPORT/SCREEN USAGE checks
	* cobc.c, typeck.c, field.c, tree.h: moved (cobc_enum_explain_storage)
	  to typeck.c as enum_explain_storage
	* typeck.c: minor refactoring of arithmetic_osvs code

2018-02-02  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* tree.c (cb_get_long_long, cb_get_u_long_long): fix bug #492
	  adjusted literal size check
	* tree.c, typeck.c, codegen.c: first approach to fix tree cast