@@ -1,4 +1,8 @@
 
+2018-02-23  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>
+
+	* codegen.c (output_module_init): cater for empty source_cache
+
 2018-02-21  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>
 
 	* typeck.y (validate_move): check for ADDRESS OF var as invalid
